# workgraph

./: .gitguardian.yml  .gitignore  CLAUDE.md  COMPARATIVE_PROMPT_ANALYSIS.md  CRON_INTEGRATION_COMPLETE.md  CRON_INTEGRATION_SUMMARY.md  Cargo.toml  DEBUG_LOGGING_IMPLEMENTATION.md  DESIGN-journal-based-coordinator-self-compaction.md  FINAL_TRIAGE_REPORT.md  PROMPT_ASSEMBLY_ANALYSIS.md  README.md  TRIAGE_SYNTHESIS.md  accidental-cycle-analysis.md  context.md  coordinator-lifecycle-audit.md  design-after-dependency-enforcement.md  executor-integration-design.md  hardening-integration-summary.md  historical-decomposition-analysis.md  introduction-and-background-after-dependency.md  migration-path.md  nightly-cleanup-design.md  poetry.txt  retry-verification-summary.md  tool-manifest-design.md  verify-timeout-design.md  verify-timeout-implementation-plan.md  verify-timeout-migration-plan.md  verify_cron_integration.sh  verify_integration_tests.sh  verify_timeout_research_summary.md  worktree-collision-research.md
.workgraph/: config.toml  graph.jsonl
agency/: starter.csv
docs/: ADR-actor-vs-agent-identity.md  AGENCY.md  AGENCY_AUDIT.md  AGENT-GUIDE.md  AGENT-LIFECYCLE.md  AGENT-SERVICE.md  COMMANDS.md  DEV.md  KEY_DOCS.md  MODEL_REGISTRY.md  README-windows.md  README.md  REVIEW-SYNTHESIS.md  agent-git-hygiene.md  audit-unmerged-branches-2026-04-25.md  audit-unmerged-branches-2026-04-26.md  config-ux-design.md  dag-assumptions-survey.md  design-cyclic-workgraph.md  design-named-profiles.md  design-shell-executor.md  design-verify-first-eval-pipeline.md  doc-sync-audit-2026-04-12.md  fix-dag-terminology.md  models.md  review-agency-system.md  review-analysis-commands.md  review-matrix.md  review-tests.md  smoke-test-coordinator-modals.md  task-id-namespacing.md  triage-wg-nex-small-model-reports-2026-04-27.md  tui-coordinator-resumption-findings.md
examples/: basic-file-ops.tools.toml  mcp-server.tools.toml  mixed-sources.tools.toml  web-access.tools.toml
schemas/: tool-manifest.schema.json
screencast/: capture-tmux.py  compress-cast.py  record-auto.sh  record-harness.py  record-heist-auto.sh  record-hero-v3.py  record-pancakes-sim.sh  setup-demo.sh
scripts/: README-nightly-cleanup.md  nightly-cleanup.sh  setup-nightly-cleanup.sh  smoke-pty-executors.sh
src/: agency.rs  chat.rs  chat_id.rs  chat_sessions.rs  check.rs  cli.rs  config.rs  config_defaults.rs  coordinator_prompt.rs  coordinator_prompt_fallback.txt  cron.rs  cycle.rs  env_sanitize.rs  federation.rs  function.rs  function_memory.rs  graph.rs  html.rs  launcher_history.rs  lib.rs  lifecycle.rs  main.rs  matrix_commands.rs  messages.rs  metrics.rs  model_benchmarks.rs  models.rs  parser.rs  plan_validator.rs  platform_timeout.rs  profile.rs  provenance.rs  query.rs  runs.rs  secret.rs  smoke.rs  stream_event.rs  trace_function.rs  trace_memory.rs  usage.rs  (+2 more)
terminal-bench/: BLOG.md  DESIGN-condition-a-isolation.md  DESIGN-hard-benchmarks.md  DESIGN-native-wg-integration.md  LOCAL-MODEL-SETUP.md  README.md  RESEARCH-local-hardware.md  RESEARCH-local-models-for-tb.md  TB-CONDITION-G-FANOUT-ANALYSIS.md  gpt-oss-120b-condition-g-smart-config.json  local-qwen3-coder-30b-condition-a-config.json  nex-eval-qwen3-coder-30b-condition-a-config.json  pre-pull-images.sh  prepare-leaderboard.sh  pyproject.toml  reproduce.sh  run_hard_benchmarks.py  run_pilot_qwen3_local_10_g.py  run_qwen3_hard_20_g.py  run_scale_experiment.py  setup-docker.sh  start-local-model.sh  tb-harness.sh  tb_collect_results.py  tb_trial_runner.py  test_verify_gate_blocking.py  test_verify_gate_smoke.py  trial-config-condition-f.json  trial-config-full-sweep-01.json  trial-config-rerun-01.json  trial-config.json
terminal-bench/analysis/: agency-pipeline-gap.md  condition-f-results.md  cross-condition-synthesis.md  decomposition-investigation.md  early-behavior-findings.md  flip-model-investigation.md  wg-availability-investigation.md
terminal-bench/docs/: audit-minimax-model-confirmation.md  audit-ulivo-g-state.md  experiment-handoff.md  experiment-progress-report.md  remote-setup.md  research-agent-web-prompting.md  research-condition-g-status.md  research-condition-g-timeout.md  research-howto-submission-review.md  research-tb-agent-turn-budget.md  scale-experiment-design.md  spec-native-executor-harbor.md
terminal-bench/leaderboard-submission/: README.md
terminal-bench/leaderboard-submission/workgraph-condition-a__minimax-m2.7/: metadata.yaml
terminal-bench/leaderboard-submission/workgraph-condition-b__minimax-m2.7/: metadata.yaml
terminal-bench/leaderboard-submission/workgraph-condition-c__minimax-m2.7/: metadata.yaml
terminal-bench/results/: analysis.md  analysis_data.json  analyze.py  pilot-comparison.md
terminal-bench/tasks/hard-benchmarks/: 01-configure-git-webserver.txt  02-mailman.txt  03-multi-source-data-merger.txt  04-financial-document-processor.txt  05-cobol-modernization.txt  06-build-cython-ext.txt  07-fix-code-vulnerability.txt  08-constraints-scheduling.txt  09-multi-module-type-migration.txt  10-iterative-test-fix.txt
terminal-bench/tb-results/: comparison-data.json  comparison-report.md
terminal-bench/tb-results/retest-g-original/: summary.json
terminal-bench/tb-results/retest-g-smart/: summary.json
terminal-bench/tests/: test_adapter.py  test_smoke_trials.py
terminal-bench/trials/: evolution-impact.md  executor-h2h-results.md  executor-synthesis.md  flip-accuracy-analysis.md  manifest-full-sweep-01.json  manifest-rerun-01.json  tb-results-pilot-01.json  tb-results-rerun-01.json  tb-results-smoke-pilot.json
terminal-bench/wg/: __init__.py  adapter.py  tasks.py
tests/: codex_handler_oai_compat.rs  evaluation_recording.rs  integration_accidental_cycle.rs  integration_agency.rs  integration_agency_edge_cases.rs  integration_agency_federation.rs  integration_agency_lineage.rs  integration_agency_loop.rs  integration_agency_pipeline.rs  integration_anthropic_streaming.rs  integration_auto_assignment.rs  integration_auto_evolver.rs  integration_bare_alias_contract.rs  integration_canonical_config.rs  (+108 more)
(+498 files in other folders)
