[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wg-terminal-bench"
version = "0.1.0"
description = "Terminal Bench harness for Workgraph: Condition A (bare agent) and Condition B (agent + workgraph)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "harbor-framework>=0.3.0",
    "litellm",
]

[project.scripts]
wg-tb-condition-a = "wg.adapter:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wg*"]
