[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wg-terminal-bench"
version = "0.1.0"
description = "Terminal Bench harness for Workgraph: Condition A (bare), B (agent + wg), C (agent + wg + skill injection)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "harbor>=0.3.0",
    "litellm",
    "ddgs>=9.0",
    "httpx>=0.24",
    "trafilatura>=1.0",
]

[project.scripts]
wg-tb-condition-a = "wg.adapter:main"
wg-tb-condition-c = "wg.adapter:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wg*"]
